fix navbar collapse for small screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -72,13 +72,13 @@ header {
     background: #F5F5F5;
 }
 
-/* .nav-link {
-    font-size: 1.25rem;
-    text-decoration: none;
-    padding: 0 !important;
-    margin-right: 2rem;
-    color: #133C55;
-} */
+@media only screen and (min-width: 992px) {
+    .nav-link {
+        font-size: 1.25rem;
+        padding: 0 !important;
+        margin-right: 2rem;
+    }
+}
 
 .active {
     background: #F5F5F5;
